# Arrakis

./: &  .gitignore  CHANGES.md  CONTRIBUTING.md  README.md  TODO.md  arrakis.opam  arrakis.opam.template  dune-project  dune-workspace
arrakis/: dune
arrakis/lib/: dune
arrakis/lib/assembler/: assembly.ml  debug.ml  debug.mli  dune  error.ml  inst_B.ml  inst_I.ml  inst_J.ml  inst_Pseudo.ml  inst_R.ml  inst_S.ml  inst_U.ml  label.ml  label.mli  lexer.mll  parser.mly  program.ml  pseudo.ml  regs.ml  segment.ml  transform_pseudo.ml  translate.ml  utils.ml
arrakis/lib/colorsh/: colorsh.ml  colorsh.mli  dune
arrakis/lib/command/: command.ml  dune  make.ml  print.ml  state.ml
arrakis/lib/common/: dune
arrakis/lib/global_utils/: dune  error.ml  integer.ml  rope.mli
arrakis/lib/gutils/: dune  rope.ml
arrakis/test/: arrakis.ml  dune  riscV_sim.ml
contrib/autocompletion/: build_sh_completion.ml  dune
doc/: README.md  compiling.md  directives.md  ecall.md  errors.md  instr.md  main.md  options.md  pseudoinstr.md  regs.md  shell.md
examples/: addi.s  dir.s  expr.s  getcwd.s  hello_world.s  helloname.s  helloworld.s  nqueens.s  polish_calc.s
examples/coreutils/: common.s  echo.s  false.s  pwd.s  true.s
examples/libc/: math.s  stdio.s  string.s
examples/simple/: hello_name.s  hello_world.s
examples/test/: dir.s  load.s
examples/testing/: function.s  int.s  j.s  load.s  main.s
lib/: cpu.ml  cpu.mli
lib/assembler/: B_instruction.ml  I_instruction.ml  J_instruction.ml  R_instruction.ml  S_instruction.ml  U_instruction.ml  assembler.ml  assembly.ml  debug.ml  debug.mli  dune  error.ml  inst_B.ml  inst_I.ml  inst_J.ml  inst_R.ml  inst_S.ml  inst_U.ml  label.ml  label.mli  lexer.ml  lexer.mll  parser.mly  program.ml  pseudo.ml  regs.ml  segment.ml  translate.ml  utils.ml
lib/colorsh/: colorsh.ml
lib/common/: cstring.ml  error.ml  integer.ml  print.ml  rope.ml  rope.mli
lib/ecall/: dune  eunix.ml  evenus.ml  types.ml  utils.ml
lib/instructions/: B.ml  I.ml  J.ml  S.ml  U.ml  dune  error.ml  insts.ml  pseudo.ml  utils.ml
lib/io/: bind.c  cstring.ml  dune  history.ml  std.ml  tty.ml
lib/shell/: disassembler.ml  dune  error.ml  shell.ml  shell.mli  types.ml  utils.ml
lib/simulator/: Arch.ml  Cpu.ml  Cpu.mli  Error.ml  Instructions.ml  Instructions.mli  Memory.ml  Memory.mli  Utils.ml  arguments.ml  dune  execute.ml  execute.mli  memory.mli
lib/syscall/: dune  scunix.ml  scvenus.ml  types.ml
src/: arrakis.opam  dune-project
src/lib/assembler/: inst_B.ml  inst_J.ml  inst_S.ml  lexer.mll  program.ml  translate.ml
src/lib/simulator/: arch.ml  cpu.mli  error.ml  instructions.ml
src/test/assembler_test/: dune
src/test/code/: addi.as
src/test/sim_test/: r_instruction.ml  tests.ml
test/: dune  riscV_sim.ml
test/assembler_test/: tests.ml
test/sim_test/: b_instruction.ml  dune  i_instruction.ml  j_instruction.ml  r_instruction.ml  s_instruction.ml  tests.ml  u_instruction.ml
tests/: dune  main.ml  run_tests.ml
tests/examples/: nqueens.in  nqueens.out  polish_calc.in  polish_calc.out
(+108 files in other folders)
