(lang dune 3.10)

(name arrakis)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license "CeCILL v2.1")

(documentation https://url/to/documentation)

(package
 (name arrakis)
 (synopsis "A RISC-V simulator")
 (description "A longer description")
 (depends ocaml dune alcotest)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
